patrones-despliegue-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parcial1-patrones-arquitectonicos-avanzados
  labels:
    app: parcial1-patrones-arquitectonicos-avanzados
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parcial1-patrones-arquitectonicos-avanzados
  template:
    metadata:
      labels:
        app: parcial1-patrones-arquitectonicos-avanzados
    spec:
      containers:
      - name: parcial1-patrones-arquitectonicos-avanzados
        image: registry.digitalocean.com/patrones/monolito-inventario:1.0.3
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: 512Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 400m
        startupProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
